@@ -42,6 +42,9 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
   * Fixed a bug in Xchat::get_prefs that was clobbering the stack(Sergio Luis)
   * Allow scripts that use a non-existent function for the shutdown callback
     to be unloaded(Lian Wan Situ)
+  * Added check in set_context for undef
+  * Added the fields from get_list "channels" for the current context to the
+    result of context_info
 
 
 ----------------------------------------------------------------------
